--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
@@ -30,8 +31,9 @@
     "autoprefixer": "^10.4.16",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "postcss": "^8.4.30",
-    "tailwindcss": "^3.3.3",
+    "eslint-config-prettier": "^9.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "latest"
   }
 }
