--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
     "next": "latest",
+    "next-themes": "^0.3.0",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "latest",
     "react-dom": "latest",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
